[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://UI/MajorMonoDisplay-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/hud_text_font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=8]
size = 48
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Label/fonts/font = null

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.85, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 128

[sub_resource type="StyleBoxTexture" id=4]
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 128, 1 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.15, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 128

[sub_resource type="StyleBoxTexture" id=7]
texture = SubResource( 6 )
region_rect = Rect2( 0, 0, 128, 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 9 )
script = ExtResource( 1 )

[node name="LeftPanel" type="Panel" parent="."]
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 0 )
custom_styles/panel = SubResource( 4 )

[node name="ScoreText" type="Label" parent="LeftPanel"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 82.0
margin_right = -17.0
margin_bottom = 102.0
rect_rotation = -90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "score"
align = 2

[node name="ScoreLabel" type="Label" parent="LeftPanel"]
anchor_right = 1.0
margin_left = 37.0
margin_top = 209.0
margin_right = 137.0
margin_bottom = 258.0
rect_min_size = Vector2( 200, 0 )
rect_rotation = -90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 2

[node name="NextChainText" type="Label" parent="LeftPanel"]
anchor_right = 1.0
margin_left = 11.0
margin_top = 456.0
margin_right = -29.0
margin_bottom = 476.0
rect_rotation = -90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "next"
align = 2

[node name="NextChainLabel" type="Label" parent="LeftPanel"]
anchor_right = 1.0
margin_left = 36.0
margin_top = 592.0
margin_right = 136.0
margin_bottom = 641.0
rect_min_size = Vector2( 200, 0 )
rect_rotation = -90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 2

[node name="RightPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
rect_min_size = Vector2( 100, 0 )
custom_styles/panel = SubResource( 7 )

[node name="BombsText" type="Label" parent="RightPanel"]
anchor_right = 1.0
margin_left = 85.0
margin_top = 33.0
margin_right = 60.0
margin_bottom = 53.0
rect_rotation = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "bombs"
align = 2

[node name="BombsLabel" type="Label" parent="RightPanel"]
anchor_right = 1.0
margin_left = 58.0
margin_top = 30.0
margin_right = 54.0
margin_bottom = 79.0
rect_rotation = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "10"

[node name="MaxChainText" type="Label" parent="RightPanel"]
anchor_right = 1.0
margin_left = 94.0
margin_top = 192.0
margin_right = 114.0
margin_bottom = 212.0
rect_rotation = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "maxchain"
align = 2

[node name="MaxChainLabel" type="Label" parent="RightPanel"]
anchor_right = 1.0
margin_left = 61.0
margin_top = 232.0
margin_right = 11.0
margin_bottom = 333.0
rect_min_size = Vector2( 50, 0 )
rect_rotation = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0
"

[node name="SecondsText" type="Label" parent="RightPanel"]
anchor_right = 1.0
margin_left = 93.0
margin_top = 519.0
margin_right = 53.0
margin_bottom = 539.0
rect_rotation = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "time"
align = 2

[node name="SecondsLabel" type="Label" parent="RightPanel"]
anchor_right = 1.0
margin_left = 61.0
margin_top = 415.0
margin_right = 87.0
margin_bottom = 464.0
rect_rotation = 90.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 2
